k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-dashboard-service
spec:
  ports:
  - port: 3333
    targetPort: 3333
  selector:
    app: health-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-dashboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-dashboard
  template:
    metadata:
      labels:
        app: health-dashboard
    spec:
      hostname: health-dashboard
      volumes:
        - name: config-volume
          configMap:
            name: health-config
      containers:
        - name: health-dashboard
          image: michaelkohler/health-dashboard:<TAG>
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "100m"
              memory: "150M"
            requests:
              cpu: "30m"
              memory: "40M"
          ports:
            - containerPort: 3333
          volumeMounts:
            - name: config-volume
              mountPath: /app/server/config/mqtt/
